# extraction-comptes-sociaux-llm

.github/workflows/: image-build.yml
api/api_centrale/: Dockerfile  main_centrale.py  requirements.txt
api/api_chandra/: pyproject.toml
api/api_chandra/src/: main_chandra.py
api/api_marker/: Dockerfile  pyproject.toml
api/api_marker/src/: main_marker.py
api/api_opendataloader/: Dockerfile  requirements.txt
api/api_opendataloader/src/: main_opendataloader.py
api/marker_proxy/: Dockerfile
api/marker_proxy/src/: proxy.py
api_marker/: Dockerfile  pyproject.toml
api_marker/src/: main_marker.py
api_marker/src/data_management/: pdf_to_image.py
libs/: pyproject.toml
libs/src/data_management/: extract_image_to_json.py  pdf_to_image.py
libs/src/extraction_common/: s3.py
marker_proxy/: Dockerfile  pyproject.toml
marker_proxy/src/: proxy.py
scripts/: comparaison_pdf_csv.py  evaluation_extraction.py  extraction_pdf_via_api.py  json_to_csv.py  pyproject.toml  test_apis.py
